--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,21 @@ h2 {
     right: 20px;
 }
 
-/*#name {
-    display: inline-block;
-}*/
+#name, #focus {
+    outline: none;
+}
+
+.buttons {
+    width: 130px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.bg-button {
+    font-weight: bold;
+    font-size: 24px;
+}
 
 @media(max-width: 700px) {
     #time {
