--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ h2 {
     justify-content: center;
 
     background-color: rgba(24, 22, 22, 0.2);
-    backdrop-filter: blur(100px);
+    /*backdrop-filter: blur(100px);*/
     border-radius: 20%;
 }
 
