--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Quicksand', sans-serif;
     /*height: 100vh;*/
     /*color: #303438;*/
@@ -15,9 +17,9 @@ body {
     font-size: 8rem;
 }
 
-h1 {
+/*h1 {
     margin-bottom: 3rem;
-}
+}*/
 
 h2 {
     opacity: .6;
@@ -33,9 +35,12 @@ h2 {
 
 #name, #focus {
     min-width: 115px;
-    /*min-width: 206px;*/
     outline: none;
-    /*border-bottom: 1px solid white;*/
+}
+
+.input-focus {
+    background-color: rgba(193, 185, 185, 0.4);
+    border-radius: 10px;
 }
 
 .buttons {
@@ -83,6 +88,8 @@ h2 {
     width: 100%;
     background-color: rgba(22, 22, 22, 0.4);
     background-image: url(../assets/overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .row {
